--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -54,3 +54,49 @@ typeMismatch.java.lang.Short=Property {0} must be a valid number
 typeMismatch.java.math.BigDecimal=Property {0} must be a valid number
 typeMismatch.java.math.BigInteger=Property {0} must be a valid number
 typeMismatch=Property {0} is type-mismatched
+
+
+#Scaffolding I18N:
+
+contactos.categoria=Categories contacts
+contactos.departamento=Department contacts 
+lista.contactos=Contacts list
+nombre=Name
+apellido=Surname
+telefono=phone
+movil=mobile
+puesto=position
+correo=mail
+email=email
+acciones=actions
+departamentos=departments
+categorias=categories
+eliminar=delete
+editar=Edit
+cerrar=close
+guardar=save
+editar.contacto=Edit contact
+direccion=address
+categoria=category
+seleccione=select
+departamento=department
+cancelar=cancel
+error=error
+registrar.contacto=register contact
+informacion=information
+departamento.nuevo=new department
+contacto.label=contact
+default.link.skip.label=link skip
+departamento.label=department
+rol.label=rol
+lista.departamentos=apartment list
+editar.departamento=edit department
+categoria.label=category
+inicio=start
+contactos=contacts
+menu=menu
+crear=create
+ver=see
+graficos=graphics
+editar.categoria=Edit category
+lista.categorias=List of Categories
