--- a/grails-app/i18n/messages_es.properties
+++ b/grails-app/i18n/messages_es.properties
@@ -52,4 +52,50 @@ typeMismatch.java.lang.Integer=La propiedad {0} debe ser un número válido
 typeMismatch.java.lang.Long=La propiedad {0} debe ser un número válido
 typeMismatch.java.lang.Short=La propiedad {0} debe ser un número válido
 typeMismatch.java.math.BigDecimal=La propiedad {0} debe ser un número válido
-typeMismatch.java.math.BigInteger=La propiedad {0} debe ser un número válido
+typeMismatch.java.math.BigInteger=La propiedad {0} debe ser un número válido 
+
+
+#Scaffolding I18N:
+
+contactos.categoria=Contacto en categoria
+contactos.departamento=Contacto en departamento 
+lista.contactos=Lista de contactos
+nombre=Nombre
+apellido=Apellido
+telefono=Telefono
+movil=movil
+puesto=puesto
+correo=correo
+email=email
+acciones=acciones
+departamentos=departamentos
+categorias=categorias
+eliminar=eliminar
+editar=Editar
+cerrar=cerrar
+guardar=guardar
+editar.contacto=Editar Contacto
+direccion=direccion
+categoria=categoria
+seleccione=seleccione
+departamento=departamento
+cancelar=cancelar
+error=error
+registrar.contacto=registrar contacto
+informacion=informacion
+departamento.nuevo=nuevo departamento
+contacto.label=contacto
+default.link.skip.label=link skip
+departamento.label=departamento
+rol.label=rol
+lista.departamentos=lista de departamentos
+editar.departamento=editar departamento
+categoria.label=categoria
+inicio=inicio
+contactos=contactos
+menu=menu
+crear=crear
+ver=ver
+graficos=graficos
+editar.categoria=editar categoria
+lista.categorias=Lista de Categorias
