--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -82,7 +82,7 @@ seleccione=select
 departamento=department
 cancelar=cancel
 error=error
-registrar.contacto=register contact
+registrar.contacto=new contact
 informacion=information
 departamento.nuevo=new department
 contacto.label=contact
@@ -96,7 +96,8 @@ inicio=start
 contactos=contacts
 menu=menu
 crear=create
-ver=see
+ver=view
 graficos=graphics
 editar.categoria=Edit category
 lista.categorias=List of Categories
+ok=OK
