Fin de I18N + Arreglando Plantilla

--- a/grails-app/i18n/messages_fr.properties
+++ b/grails-app/i18n/messages_fr.properties
@@ -17,3 +17,49 @@ default.not.unique.message=La propriété [{0}] de la classe [{1}] avec la valeu
 
 default.paginate.prev=Précédent
 default.paginate.next=Suivant
+
+
+#Scaffolding I18N:
+
+contactos.categoria=contacts catégorie
+contactos.departamento=Contacts du département
+lista.contactos=liste de contact
+nombre=nom
+apellido=le nom
+telefono=téléphone
+movil=mobile
+puesto=poster
+correo=mail
+email=email
+acciones=actions
+departamentos=les départements
+categorias=catégories
+eliminar=enlever
+editar=éditer
+cerrar=fermer
+guardar=sauvegarder
+editar.contacto=modifier le contact
+direccion=adresse
+categoria=catégorie
+seleccione=choisir
+departamento=département
+cancelar=annuler
+error=erreur
+registrar.contacto=enregistrer contact
+informacion=information
+departamento.nuevo=nouveau département
+contacto.label=contact
+default.link.skip.label=link skip
+departamento.label=department
+rol.label=rol
+lista.departamentos=liste des appartements
+editar.departamento=modifier le département
+categoria.label=catégorie
+inicio=commencer
+contactos=les contacts
+menu=menu
+crear=créer
+ver=regarder
+graficos=des graphiques
+editar.categoria=Edit category
+lista.categorias=Liste catégories
